fix well spacing in popovers
- add options icon

--- a/client/assets/styles/scss/components/fancy-select.scss
+++ b/client/assets/styles/scss/components/fancy-select.scss
@@ -8,7 +8,7 @@
   max-width: 300px;
   opacity: 0;
   overflow-y: auto;
-  padding: 4px 0;
+  padding: 6px;
   position: absolute;
   transform: scale3d(.95,.95,1);
   transform-origin: 50% 50%;
@@ -21,6 +21,10 @@
     transition: opacity .05s ease-in, transform .05s;
   }
 
+  .list-item {
+    border-radius: $input-border-radius;
+  }
+
   // small li
   .fancy-select-sm .list-item {
     font-size: 13px;
@@ -31,7 +35,7 @@
   // li.divider
   .divider {
     background: $gray-lighter;
-    margin: 3px 0;
+    margin: 6px 0;
     min-height: 1px;
   }
 
