--- a/client/assets/styles/scss/components/wells.scss
+++ b/client/assets/styles/scss/components/wells.scss
@@ -29,7 +29,7 @@
   &.well-popover {
     font-size: 15px;
     font-weight: $weight-normal;
-    margin: 9px 9px 3px;
+    margin-top: 6px;
 
     &.orange {
       background-color: $orange-lightest;
